--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,8 @@
-#
-# Please consult the `Deployment` section in the docs if you want to deploy
-# this. You *need* to keep this nginx service, even if you have your own,
-# otherwise the static files will not be served correctly! If you do remove
-# it, configure yours similarly to what's in config/nginx.conf
-# Also take a look at the "Static files" section in the .env file
-
 services:
   web:
     build:
       context: .
-      dockerfile: docker/Dockerfile.web
+      dockerfile: docker/Dockerfile.wger
     depends_on:
       db:
         condition: service_healthy
@@ -34,6 +27,25 @@ services:
       start_period: 300s
       retries: 5
     restart: unless-stopped
+    ###
+    read_only: true                    # Blocks file writes/exploits
+    tmpfs:
+      - /tmp:rw,size=1M               # Tiny writable tmp
+      - /var/tmp:rw,size=1M
+    security_opt:
+      - no-new-privileges:true         # Blocks priv escalation
+      - seccomp:unconfined             # Strict syscall filter
+    cap_drop:
+      - ALL                            # Drop all capabilities
+    cap_add:
+      - CHOWN                          # Only needed for media
+      - DAC_OVERRIDE
+    ulimits:
+      nofile: 1024                     # Limit FDs
+      nproc: 1024                      # Limit processes
+    sysctls:
+      - kernel.dmesg_restrict=1        # Block kernel logs
+      - kernel.kptr_restrict=2
 
   nginx:
     build:
@@ -42,7 +54,7 @@ services:
     depends_on:
       - web
     volumes:
-      - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
+      #- ./config/nginx.conf:/etc/nginx/conf.d/default.conf
       - static:/wger/static:ro
       - media:/wger/media:ro
     ports:
@@ -104,14 +116,10 @@ services:
       start_period: 30s
     restart: unless-stopped
 
-    # You probably want to limit the memory usage of the cache, otherwise it might
-    # hog all the available memory. Remove or change according to your needs.
-    #mem_limit: 5gb
-
   celery_worker:
     build:
       context: .
-      dockerfile: docker/Dockerfile.celery-worker
+      dockerfile: docker/Dockerfile.wger
     command: /start-worker
     env_file:
       - ./config/prod.env
@@ -135,7 +143,7 @@ services:
   celery_beat:
     build:
       context: .
-      dockerfile: docker/Dockerfile.celery-beat
+      dockerfile: docker/Dockerfile.wger
     command: /start-beat
     logging:
       driver: json-file
@@ -155,11 +163,6 @@ volumes:
   celery-beat:
   redis-data:
 
-  # Heads up, if you remove these volumes and use folders directly you need to chown them
-  # to the UID and GID 1000 even if it doesn't exist on your system. Also, they should
-  # be readable by everyone.
-  #
-  # https://wger.readthedocs.io/en/latest/production/docker.html#missing-static-files
   media:
   static:
 
