--- a/docker/Dockerfile.nginx
+++ b/docker/Dockerfile.nginx
@@ -1,1 +1,7 @@
-FROM docker.io/nginx:stable
+FROM bitnami/nginx:latest
+USER root
+RUN rm -rf /opt/bitnami/nginx-agent \
+    /opt/bitnami/common/bin/render-template \
+    /opt/bitnami/common/.spdx-render-template.spdx
+COPY config/nginx.conf /etc/nginx/conf.d/default.conf
+USER 1001
