--- a/docker/Dockerfile.wger
+++ b/docker/Dockerfile.wger
@@ -1,8 +1,4 @@
 FROM docker.io/wger/server:latest
 USER root
-RUN apt-get update && \
-    apt-get upgrade -y && \
-    apt-get autoremove -y && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+RUN apt-get update && apt-get upgrade -y && apt-get autoremove -y && apt-get clean && rm -rf /var/lib/apt/lists/*
 USER 1000
