Fix typo in Dockerfile for PostgreSQL

--- a/docker/Dockerfile.postgres
+++ b/docker/Dockerfile.postgres
@@ -1,4 +1,4 @@
-FFROM bitnami/postgresql:latest
+FROM bitnami/postgresql:latest
 USER root
 RUN rm -f /opt/bitnami/scripts/postgresql/entrypoint.sh || true
 USER 1001
