--- a/docker/Dockerfile.wger
+++ b/docker/Dockerfile.wger
@@ -1,4 +1,5 @@
 FROM docker.io/wger/server:latest
 USER root
+RUN pip install --no-cache-dir --upgrade --break-system-packages urllib3>=2.6.0
 RUN apt-get update && apt-get upgrade -y && apt-get autoremove -y && apt-get clean && rm -rf /var/lib/apt/lists/*
 USER 1000
