--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,10 @@
 services:
+  cert-init:
+    image: alpine:3.20
+    command: ["sh", "-c", "apk add --no-cache openssl && mkdir -p /certs && [ ! -f /certs/server.crt ] && openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /certs/server.key -out /certs/server.crt -subj '/C=CA/ST=ON/L=Toronto/O=Wger/CN=localhost' -batch && chmod 644 /certs/server.* && echo 'CERTS CREATED' || echo 'CERTS EXIST'"]
+    volumes:
+      - ./certs:/certs
+      
   web:
     build:
       context: .
@@ -38,6 +44,7 @@ services:
       - static:/wger/static:ro
       - media:/wger/media:ro
     depends_on:
+      - cert-init
       - web
     healthcheck:
       test: ["CMD", "service", "nginx", "status"]
