--- a/config/dev.env
+++ b/config/dev.env
@@ -3,3 +3,7 @@ WGER_USE_GUNICORN=False
 EXERCISE_CACHE_TTL=30
 SYNC_EXERCISES_ON_STARTUP=False
 AXES_ENABLED=False
+SESSION_COOKIE_SECURE=1
+CSRF_COOKIE_SECURE=1
+SESSION_COOKIE_SAMESITE=Strict
+CSRF_COOKIE_SAMESITE=Strict
