--- a/config/prod.env
+++ b/config/prod.env
@@ -203,3 +203,9 @@ GUNICORN_CMD_ARGS="--workers 3 --threads 2 --worker-class gthread --proxy-protoc
 #
 # Prometheus metrics
 EXPOSE_PROMETHEUS_METRICS=False
+
+SESSION_COOKIE_SECURE=True
+CSRF_COOKIE_SECURE=True
+SESSION_COOKIE_SAMESITE=Strict
+CSRF_COOKIE_SAMESITE=Strict
+
