--- a/config/waf.conf
+++ b/config/waf.conf
@@ -8,24 +8,36 @@ server {
     listen 8443 ssl;
     http2 on;
     server_name _;
-    
+
     ssl_certificate /etc/nginx/certs/server.crt;
     ssl_certificate_key /etc/nginx/certs/server.key;
-    
+
     modsecurity on;
-    
+
+    # Global security headers for all locations
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-Frame-Options "DENY" always;  # You already see this in curl
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
+    add_header Cross-Origin-Embedder-Policy "require-corp" always;
+    add_header Cross-Origin-Opener-Policy "same-origin" always;
+    add_header Cross-Origin-Resource-Policy "same-site" always;
+    add_header X-Permitted-Cross-Domain-Policies "none" always;
+    add_header Content-Security-Policy "default-src 'self'; img-src 'self' data:; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'" always;
+
     location /static/ {
         alias /wger/static/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
     }
-    
+
     location /media/ {
         alias /wger/media/;
         expires 7d;
         add_header Cache-Control "public, no-transform";
     }
-    
+
     location / {
         proxy_pass http://web:8000;
         proxy_set_header Host $host;
